--- a/aula-08/style.css
+++ b/aula-08/style.css
@@ -6,7 +6,7 @@
 }
 
 .livro{
-    background-color: blueviolet;
+    background-color: rgb(226, 43, 43);
     font-weight: bold;
     font-size: 48px;
 }
